--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,21 +33,18 @@ jobs:
       - name: Set up CMake and Ninja
         uses: lukka/get-cmake@latest
 
-      - name: Set up Conan
+      - name: Build with CMake
         run: |
-          python -m pip install -U conan
-          conan profile detect --force
-          conan export third_party/funchook --version 1.1.3
-          conan install . --build=missing -pr:a .github/conan_profiles/windows
-
-      - name: Build with Conan
-        run: conan build . -pr:a .github/conan_profiles/windows
+          mkdir build
+          cd build
+          cmake -G Ninja -DCMAKE_BUILD_TYPE=Release ..
+          cmake --build .
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: endstone-cpp-plugin-windows
-          path: ./build/Release/*.dll
+          path: ./build/*.dll
 
   build_linux:
     name: Build on Ubuntu
@@ -83,18 +80,15 @@ jobs:
       - name: Set up CMake and Ninja
         uses: lukka/get-cmake@latest
 
-      - name: Set up Conan
+      - name: Build with CMake
         run: |
-          python -m pip install -U conan
-          conan profile detect --force
-          conan export third_party/funchook --version 1.1.3
-          conan install . --build=missing -pr:a .github/conan_profiles/linux
-
-      - name: Build with Conan
-        run: conan build . -pr:a .github/conan_profiles/linux
+          mkdir build
+          cd build
+          cmake -G Ninja -DCMAKE_BUILD_TYPE=Release ..
+          cmake --build .
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: endstone-cpp-plugin-linux
-          path: ./build/Release/*.so
+          path: ./build/*.so
