refactor: rename files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(endstone_cpp_plugin CXX)
+project(endstone_cpp_example_plugin CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -59,7 +59,7 @@ target_link_libraries(endstone_headers INTERFACE fmt::fmt)
 # ===============
 # Build
 # ===============
-add_library(${PROJECT_NAME} SHARED src/endstone_cpp_plugin.cpp)
+add_library(${PROJECT_NAME} SHARED src/example_plugin.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 target_link_libraries(${PROJECT_NAME} PRIVATE endstone::headers)
 
