refactor: simplify CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,11 +18,8 @@ elseif (UNIX)
     if (NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
         message(FATAL_ERROR "Clang is required on Linux.")
     endif ()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-    link_libraries("-static-libgcc -static-libstdc++")
-    link_libraries(libc++.a)
-    link_libraries(libc++abi.a)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -fPIC")
+    link_libraries(-static-libgcc -static-libstdc++ libc++.a libc++abi.a)
 else ()
     message(FATAL_ERROR "${CMAKE_SYSTEM_NAME} (${CMAKE_SYSTEM_PROCESSOR}) is not supported")
 endif ()
